--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,27 @@
 .navigation {
-  width: 33%;
-  height: 10%;
+  width: 32.5vw;
+  height: 10vh;
+  font-size: 200%;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+  background-color: #ABFFFF;
+}
+
+nav {
+  left: 50%;
+  margin-bottom: 0.5vh;
+  padding: 0px;
+}
+
+div {
+  left: 50%
 }
 
 #button {
-  width: 100%;
-  height: 90%;
-  min-height: 600px;
+  width: 98vw;
+  height: 85vh;
+  font-size: 300%;
+  font-family: Arial, Helvetica, sans-serif;
 }
